--- a/FeatureDisplay Example.html
+++ b/FeatureDisplay Example.html
@@ -172,12 +172,12 @@
     <div id="feature-img-wrapper" class="feature-image-wrapper">
       <img
         id="image1"
-        src="images/image.svg"
+        src="images/Image1.webp"
         alt="Image 1"
       />
       <img
         id="image2"
-        src="images/image.svg"
+        src="images/Image2.webp"
         alt="Image 2"
       />
       <!-- Add more images as needed -->
