--- a/FeatureDisplay Example.html
+++ b/FeatureDisplay Example.html
@@ -6,47 +6,37 @@
     <title>Your Page Title</title>
     <style>
       /* Styles for the animations, define more if needed */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
+      .fd_hidden {
+        display: none;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.5s ease-out, visibility 0s linear 0.5s; /* Ensure transitions are handled smoothly */
+      }
 
-@keyframes moveIn {
-  from { transform: translateX(-4rem); opacity: 0; }
-      to { transform: translateX(0); opacity: 1; }
-  }
-}
+      .fd_moveIn {
+        /* Define animation properties specific to your design requirements */
+        /* Example: */
+        animation: slideIn 0.5s ease-out forwards;
+      }
 
-.for-testing {
-  width: 5rem;
-  height: 5rem;
-  background-color: #2B3C96;
-}
-
-/* Styles for the images inside the image wrapper */
-.feature-image-wrapper img {
-  display: none; /* Hidden by default */
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.5s ease-out, visibility 0s linear 0.5s; /* Delay visibility transition until opacity transition ends */
-}
-
-/* Styles for animation-in of the image */
-.feature-image-wrapper img.moveIn {
-  animation: moveIn 0.5s ease-out;
-  animation-fill-mode: forwards; /* Keeps the state at the end of the animation */
-}
-
-.feature-image-wrapper img.fadeIn {
-  animation: fadeIn 0.5s ease-out;
-}
+      @keyframes slideIn {
+        from {
+          transform: translateX(-20px);
+          opacity: 0;
+        }
+        to {
+          transform: translateX(0);
+          opacity: 1;
+        }
+      }
 
 
 /* Styles below depends on the project, the following styles is not related to the FeatureDisplay Class */
+.for-testing {
+  width: 10rem;
+  height: 10rem;
+  background-color:#2b40ac;
+}
 
 .feature-image-wrapper {
   background-color: #f1f1f1;
@@ -195,7 +185,7 @@
 
   document.addEventListener('DOMContentLoaded', function () {
       const options = {
-          animationType: 'moveIn',
+          animationType: 'fd_moveIn',
           animationDuration: 300
       };
       new FeatureDisplay('.features-container', options);
