--- a/FeatureDisplay Example.html
+++ b/FeatureDisplay Example.html
@@ -35,6 +35,7 @@
         width: 10rem;
         height: 10rem;
         background-color:#2b40ac;
+        padding: 1rem;
       }
 
       .feature-image-wrapper {
@@ -170,7 +171,7 @@
         src="images/Image1.webp"
         alt="Image 1"
       />
-      <div id="div2" class="for-testing">
+      <div id="div2" class="for-testing" data-feature-display='true'>
 
       </div>
       <!-- Add more images as needed -->
